finished the styles

--- a/review.html
+++ b/review.html
@@ -10,7 +10,7 @@
 <body>
     <main class="main">
         <section class="section">
-            <div>
+            <div class="title">
                 <h2>Our Reviews</h2>
                 <div class="underline"></div>
             </div>
@@ -18,7 +18,7 @@
                 <div class="img-container">
                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                 </div>
-                <h4 id="name">Narcisa Salbatica</h4>
+                <h4 id="name">Sara Jones</h4>
                 <p id="job">Web dev</p>
                 <p id="info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum, saepe quos. Nesciunt distinctio, veniam quia amet earum voluptatem assumenda hic tempore, fugit voluptatibus, temporibus omnis asperiores beatae? Provident, corrupti nulla!</p>
             <div class="btn-container">
